--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap-cerulean.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/secretario.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/switch-button.css") ?> />
     </head>
     <body>
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
