--- a/application/views/scripts/onibus-intermunicipal/index.phtml
+++ b/application/views/scripts/onibus-intermunicipal/index.phtml
@@ -78,7 +78,7 @@
                                     O campo <strong>Número de Assentos</strong> é obrigatório.
                                 </div>
                                 <div class="alert alert-danger numero_assentos_maximo" role="alert" style="display:none;">
-                                    A nº de assentos não pode ser maior que a capacidade.
+                                    O nº de assentos não pode ser maior que a capacidade.
                                 </div>
                             </div>
                         </div>
